# Helpdesk-MKT-AgenticAI

./: .gitignore  2026.xlsx  HARDWARE_AGENT_SUMMARY.md  IT_Helpdesk_Knowledge_Base.md  MKT_Helpdesk_Architecture_Guide.html  MKT_Helpdesk_Architecture_Guide.md  Materi_Presentasi_Helpdesk_MKT_AI.md  README.md  all_sheets_summary.txt  architecture.mmd  backend_logs.txt  backend_logs_2.txt  backend_logs_5.txt  backend_logs_6.txt  backend_logs_tail.txt  backup.ps1  backup.sh  docker-compose.yml  generate_icons.py  instruksi.md  mkt-helpdesk.service  package-lock.json  restore.ps1  restore.sh  scratch.py  start_all.bat  start_all.sh  start_nativ_windows.bat  telegram_logs.txt  wmi_test.py  workflow.mmd
backend/: .env.example  Dockerfile  add_columns.py  check_exact_ticket.py  check_syntax.py  check_ticket.py  config.py  create_tables.py  database.py  excel_data.json  filter_logs.py  helpdesk_demo.db  ingest_rag.py  inject_port_checker.py  inject_ticket.py  main.py  ps_test.py  read_excel.py  req_temp.txt  requirements.txt  (+14 more)
crewai_agents/: Dockerfile  api.py  crewai_output.txt  debug_output.txt  pyproject.toml
crewai_agents/src/mkt_helpdesk_ai/: __init__.py  crew.py  main.py
crewai_agents/src/mkt_helpdesk_ai/config/: agents.yaml  tasks.yaml
crewai_agents/src/mkt_helpdesk_ai/tools/: __init__.py  diagnostic_tools.py  inventory_tools.py  knowledge_tools.py  telegram_tools.py  zammad_tools.py
hardware_agent/src-tauri/: Cargo.toml  tauri.conf.json
hardware_agent/src-tauri/icons/: icon.icns
hardware_agent/src-tauri/src/: hardware_monitor.rs  main.rs  telemetry.rs
(+37 files in other folders)
