[package]
name = "mkt_hardware_agent"
version = "1.0.0"
description = "MKT Helpdesk AI Hardware Agent"
authors = ["PT Megakreasi Tech"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = ["api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
reqwest = { version = "0.11", features = ["json", "blocking"] }
mac_address = "1.1.5"
hostname = "0.3.1"
tokio = { version = "1.28", features = ["full"] }
local-ip-address = "0.5"
active-win-pos-rs = "0.8.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
